--- a/task_manager/manager/static/css/api_project_tasks.css
+++ b/task_manager/manager/static/css/api_project_tasks.css
@@ -10,6 +10,10 @@ h1 {
     text-align: center;
     margin: 20px 0;
     color: #495057;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 
 .kanban-board {
@@ -86,6 +90,82 @@ h1 {
     background-color: #e9ecef;
 }
 
+
+.icon-button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    font-size: 20px;
+    transition: transform 0.3s ease;
+}
+
+.icon-button:hover {
+    transform: scale(1.2);
+}
+
+.modal {
+    display: none; /* Скрываем модальное окно по умолчанию */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 300px;
+}
+
+.modal-content p {
+    margin-bottom: 20px;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+
+.modal-buttons button {
+    background-color: #495057;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.modal-buttons button:hover {
+    background-color: #343a40;
+}
+
+.modal-buttons .cancel-button {
+    background-color: #6c757d;
+}
+
+.modal-buttons .cancel-button:hover {
+    background-color: #495057;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    font-size: 16px;
+}
 /* Адаптивность */
 
 
