--- a/task_manager/manager/templates/manager_api/api_project_tasks.html
+++ b/task_manager/manager/templates/manager_api/api_project_tasks.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="{% static 'css/api_project_tasks.css' %}">
 </head>
 <body>
+    <a href="/manager/api_page/projects/" class="back-button">← Назад</a>
     <h1>
-        <span id="project-name">Проект</span>
+        <span id="project-name">Загрузка проекта...</span>
         <button class="icon-button" id="edit-project">✏️</button>
         <button class="icon-button" id="delete-project">🗑️</button>
     </h1>
