пофиксил все баги, теперь оно вроде работает как надо. какой же это говнокодище что в питоне что в джаваскрипте, мне стыдно

--- a/task_manager/manager/static/css/api_project_tasks.css
+++ b/task_manager/manager/static/css/api_project_tasks.css
@@ -189,6 +189,14 @@ h1 {
     background-color: #6c757d;
 }
 
+.modal-buttons .edit-task-button {
+    background-color: #6c757d;
+}
+
+.modal-buttons .delete-task-button {
+    background-color: #6c757d;
+}
+
 .modal-buttons .cancel-button:hover {
     background-color: #495057;
 }
